# origami-aesthetics-mcp

./: README.md  pyproject.toml
src/origami_aesthetics/: __init__.py  server.py
src/origami_aesthetics_mcp/: server.py
