[project]
name = "origami-aesthetics-mcp"
version = "1.3.0"
description = "Origami-inspired aesthetic composition MCP server with rhythmic presets and attractor visualization"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dal Marsters" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dynamics = [
    "aesthetic-dynamics-core",
]

[project.scripts]
origami-aesthetics = "origami_aesthetics.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["origami_aesthetics"]

[tool.hatch.build.targets.sdist]
include = [
    "origami_aesthetics/",
    "pyproject.toml",
    "README.md",
]
