[project]
name = "origami-aesthetics-mcp"
version = "1.3.0"
description = "Origami-inspired aesthetic composition MCP server with rhythmic presets and attractor visualization"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dal Marsters" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.0",
    "numpy>=1.24.0",
]

[project.scripts]
origami-aesthetics = "origami_aesthetics_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["origami_aesthetics_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "origami_aesthetics_mcp/",
    "pyproject.toml",
    "README.md",
]
